--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <title>Vite App</title>
   </head>
   <body>
-    <div id="app"></div>
+    <!-- <div id="app"></div> -->
+    <div>
+      Hello world
+    </div>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
