--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -8,8 +11,18 @@
   </head>
   <body>
     <!-- <div id="app"></div> -->
-    <div>
-      Hello world
+    <div class="intro-section">
+      <div class="intro-section-left">
+        <h1 class="intro-section-text">
+          Hello, World
+        </h1>
+        <button class="button">
+          Climb the beautiful mountain.
+        </button>
+      </div>
+      <div class="intro-section-right">
+        <img src="https://storage.lebonguide.com/crop-1200x630/42/63/971BFD13-2C8F-45FC-B910-3BDE459555D6.png">
+      </div>
     </div>
     <script type="module" src="/main.js"></script>
   </body>
