--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="style.css">
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -16,14 +17,15 @@
         <h1 class="intro-section-text">
           Hello, World
         </h1>
-        <button class="button">
+        <a class="button"href="http://localhost/first-project/formulaire.html">
           Climb the beautiful mountain.
-        </button>
+        </a><br><br>
+        <a href="./test pdf.pdf" target="_blank" class="button">Read my internship report</a>
       </div>
       <div class="intro-section-right">
         <img src="https://storage.lebonguide.com/crop-1200x630/42/63/971BFD13-2C8F-45FC-B910-3BDE459555D6.png">
       </div>
     </div>
-    <script type="module" src="/main.js"></script>
+    <!-- <script type="module" src="/main.js"></script> -->
   </body>
 </html>
