--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <a class="button" href="http://localhost/first-project/formulaire.html">
           Climb the beautiful mountain.
         </a><br><br>
-        <a href="./test pdf.pdf" target="_blank" class="button">Read my internship report</a>
+        <a href="./internship.pdf" target="_blank" class="button">Read my internship report</a>
       </div>
       <div class="intro-section-right">
         <img src="https://storage.lebonguide.com/crop-1200x630/42/63/971BFD13-2C8F-45FC-B910-3BDE459555D6.png">
