--- a/index.html
+++ b/index.html
@@ -21,9 +21,17 @@
         </button>
       </div>
       <div class="intro-section-right">
-        <img src="https://storage.lebonguide.com/crop-1200x630/42/63/971BFD13-2C8F-45FC-B910-3BDE459555D6.png">
+        <img src="https://storage.lebonguide.com/crop-1200x630/42/63/971BFD13-2C8F-45FC-B910-3BDE459555D6.png" class="intro-img">
       </div>
     </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
     <script type="module" src="/main.js"></script>
+    <script>
+      document.addEventListener('DOMContentLoaded', () => {
+    setTimeout(() => {
+        gsap.to(".intro-img", { ease: "expo.out", x: "100%", duration: 1, delay: 0.45 });
+    }, 1000)
+})
+    </script>
   </body>
 </html>
