--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <a class="button" href="./formulaire.html">
         Climb the beautiful mountain.
       </a><br><br>
-      <a href="./file:///C:/Users/alexi/Downloads/rapport%20de%20stage%20alexis%20marcambault.pdf" target="_blank" class="button">Read my internship report</a>
+      <a href="./file:///C:/Users/alexi/Downloads/Rapport%20de%20stage%20Alexis%20Marcambault%201.pdf" target="_blank" class="button">Read my internship report</a>
     </div>
     <div class="intro-section-right">
       <img src="https://storage.lebonguide.com/crop-1200x630/42/63/971BFD13-2C8F-45FC-B910-3BDE459555D6.png"
