--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <a class="button" href="./formulaire.html">
         Climb the beautiful mountain.
       </a><br><br>
-      <a href="./internship.pdf" target="_blank" class="button">Read my internship report</a>
+      <a href="./Rapport de stage Alexis Marcambault 1.pdf" target="_blank" class="button">Read my internship report</a>
     </div>
     <div class="intro-section-right">
       <img src="https://storage.lebonguide.com/crop-1200x630/42/63/971BFD13-2C8F-45FC-B910-3BDE459555D6.png"
